Upgraded to Java8. Minor improvements in comments, messages and the like.